[workspace]
resolver = "3"
members = ["motis-openapi-progenitor", "server"]

[workspace.package]
edition = "2024"
repository = "https://github.com/TUM-Dev/navigatum"

[workspace.lints.rust]
unused_qualifications = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
# Restrictions
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
indexing_slicing = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
panic = "warn"
panic_in_result_fn = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
unused_trait_names = "warn"
use_self = "warn"

# Pedantics without being too noisy
pedantic = { level = "warn", priority = -1 }
# Cargo lints guard the manifests (wildcard deps, feature naming).
cargo = { level = "warn", priority = -1 }
# Transitive version duplication (windows-sys, getrandom, ...) we cannot control.
multiple_crate_versions = "allow"
# motis-openapi-progenitor is generated and internal, never published to a registry.
cargo_common_metadata = "allow"
derive_partial_eq_without_eq = "allow"
enum_variant_names = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# geo-heavy codebase: lat/lon literals like 48.262444909063125 are easier to read
# without thousands separators inserted into the fractional part.
unreadable_literal = "allow"

[workspace.dependencies]
ab_glyph = { version = "0.2.32", default-features = false }
actix-cors = "0.7.1"
actix-files = "0.6"
actix-governor = { version = "0.10.0", features = ["logger"] }
actix-middleware-etag = "0.5.0"
actix-web = { version = "4.13.0", default-features = false, features = ["compress-brotli", "compress-gzip", "compress-zstd", "cookies", "http2", "macros"] }
actix-web-prom = { version = "0.10.0", default-features = false, features = [] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
base64 = "0.22.1"
bytes = "1"
chroma-forge = "1.0.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
csv = "1.3"
fast_qr = { version = "0.13.1", features = ["image"] }
futures = "0.3.32"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = "0.27.0"
insta = "1.46.3"
itertools = "0.15.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
logos = "0.16.1"
meilisearch-sdk = { version = "0.33.0", default-features = false, features = ["reqwest", "jwt_aws_lc_rs"] }
moka = { version = "0.12", features = ["future"] }
motis-openapi-progenitor = { version = "0.4.0", path = "motis-openapi-progenitor" }
oauth2 = { version = "5.0.0", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
octocrab = { version = "0.53", default-features = false, features = ["default-client", "retry", "rustls", "rustls-webpki-tokio", "rustls-aws-lc-rs", "jwt-aws-lc-rs", "tokio"] }
parquet = { version = "59.0.0", default-features = false, features = ["zstd"] }
pretty_assertions = "1.4.1"
progenitor-client = "0.14.0"
prometheus = { version = "0.14", default-features = false }
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "hickory-dns", "http2", "json", "rustls"] }
rstest = "0.26.1"
rustls = "0.23.36"
serde = { version = "1.0", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = { version = "1.0.149", features = ["raw_value"] }
serde_with = { version = "3.16.1", default-features = false, features = [] }
serde_yaml = "0.9.34"
sqlx = { version = "0.9.0", features = ['chrono', 'json', 'macros', 'migrate', 'postgres', 'runtime-tokio', 'tls-rustls'], default-features = false }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.25.0"
testcontainers = { version = "0.27.1", features = ["watchdog"] }
testcontainers-modules = { version = "0.15.0", features = ["meilisearch", "postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.49", default-features = false }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-log = { version = "0.2.0", features = ["std", "log-tracer", "interest-cache"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "fmt"] }
tracing-test = "0.2.6"
unicode-truncate = "2.0.1"
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras", "url"] }
utoipa-actix-web = "0.1.2"
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
valhalla-client = { version = "0.5.0", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.release]
strip = false
lto = false

[profile.dev.package]
# https://insta.rs/docs/quickstart/
insta.opt-level = 3
similar.opt-level = 3

# Enable max optimizations for some dependencies, but not for our code
# nessesary to get acceptable performance out of the image processing code
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.imageproc]
opt-level = 3

[profile.dev.package.ab_glyph]
opt-level = 3

# https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3
