[project]
name = "navigatum-data"
version = "0.0.0"
description = "Data processing pipeline for NavigaTUM"
requires-python = ">=3.14"
dependencies = [
  "backoff==2.2.1",
  "beautifulsoup4==4.15.0",
  "brotli>=1.2.0",
  "dataframely==2.10.1",
  "defusedxml==0.7.1",
  "holidays==0.99",
  "lxml==6.1.1",
  "orjson==3.11.9",
  "Pillow==12.2.0",
  "polars==1.42.0",
  "pyarrow==24.0.0",
  "pydantic==2.13.4",
  "pyyaml==6.0.3",
  "requests==2.34.2",
  "requests-oauthlib==2.0.0",
  "ruamel.yaml==0.19.1",
  "tqdm==4.68.3",
  "utm==0.8.1",
  "xxhash==3.7.1",
]

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "opening-hours-py==2.0.2",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.19",
  "types-Pillow==10.2.0.20240822",
  "types-PyYAML==6.0.12.20260518",
  "types-requests==2.33.0.20260518",
  "types-termcolor==1.1.6.2",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
# strict = true
no_implicit_reexport = true
strict_equality = true
pretty = true

plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
disallow_any_generics = true
disallow_any_explicit = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
  # pycodestyle / pyflakes / docstrings - fundamentals
  "E", "W", "F", "D",
  # ruff-specific, pyupgrade
  "RUF", "UP",
  # bug catchers
  "A",     # flake8-builtins (shadowing `id`, `type`, `list`, …)
  "B",     # flake8-bugbear (mutable defaults, zip-without-strict, …)
  "BLE",   # blind `except Exception` / bare `except`
  "DTZ",   # naive datetime usage
  "PGH",   # pygrep-hooks (blanket noqa, type: ignore, eval, …)
  "PYI",   # type-stub issues
  "S",     # flake8-bandit (security; replaces the bandit pre-commit hook)
  "YTT",   # sys.version misuse
  # imports
  "I",     # isort (sort imports)
  "ICN",   # canonical aliases (np, pd, pl, …)
  "TID",   # tidy-imports (no relative, no banned)
  "FA",    # `from __future__ import annotations` where it helps
  "INP",   # implicit-namespace-package (a dir without `__init__.py`)
  # logging
  "LOG",   # mis-use of the `logging` stdlib module
  "G",     # logging format (G004 disabled below)
  # naming
  "N",     # pep8-naming
  # type annotations
  "ANN",   # flake8-annotations (functions must declare argument & return types; ANN401 relaxed below)
  # pylint subsets - errors, warnings, conventions; PLR (refactor) stays out (complexity overlaps C90, magic-values too noisy)
  "PLE",   # pylint errors
  "PLW",   # pylint warnings
  "PLC",   # pylint conventions (import-outside-top-level, …)
  # comprehensions, performance, simplification
  "C4",    # flake8-comprehensions
  "FURB",  # refurb-style modernizations
  "PERF",  # micro-perf foot-guns
  "SIM",   # flake8-simplify
  "PIE",   # misc lints
  "FLY",   # static `str.join` → f-string
  "RET",   # branches around `return`
  "RSE",   # `raise Exception()` → `raise Exception`
  "TRY",   # tryceratops (exception-handling antipatterns)
  # paths / fs / exec
  "PTH",   # prefer pathlib over os.path
  "EXE",   # executable shebang sanity
  # api ergonomics
  "ARG",   # unused arguments
  "FBT",   # boolean-trap (positional bools)
  "PT",    # pytest style
  "SLF",   # private member access across modules
  "SLOT",  # `__slots__` correctness on subclasses
  "T10",   # leftover `breakpoint()` / `pdb` calls
  "T20",   # leftover prints
  # numpy / type-checking placement
  "NPY",   # numpy-specific
  "TC",    # type-checking imports placement
]
ignore = [
  #### modules
  "EM", # no formatting in exceptions (why is this a rule?)
  "C90", # mccabe complexity
  "DJ", # django
  "TD", # too many todos/fixmes

  #### rules
  "ANN401", # `Any` is legitimate at the orjson/yaml/`*args` boundaries; require *an* annotation, not a specific type
  "SIM108", # ternary operator should be used without a concearn for the code complexity
  "G004", # f-strings in logging are fine; lazy %-formatting rarely worth the readability cost
  "S101", # `assert` is used as a runtime guard in CLI/scraping code; this matched bandit's prior `B101` skip
  "TRY003", # long messages on vanilla exceptions; switching every site to a custom class isn't worth it for a batch pipeline
  "TC001", # runtime imports in TYPE_CHECKING - pydantic/dataframely need the symbols at runtime
  "TC002",
  "TC003",
  "FBT001", # boolean-trap on definitions is too opinionated for internal helpers
  "FBT002",
  "PT011", # `pytest.raises(Exception)` without `match=` - too noisy in current tests

  # docstrings
  "D100", # Missing docstring in public module => too much work
  "D101", # Missing docstring in public class => too much work
  "D104", # Missing docstring in public package => too much work
  "D107", #docstring in `__init__`
  "D203", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
  "D400", # Gramar police much? (First line should end with a period)
  "D415", # Gramar police much? (First line should end with a period, question mark, or exclamation point)

  # formatter conflicts
  "W191", # tab-indentation
  "E501", # line-too-long
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "Q000", # bad-quotes-inline-string
  "Q001", # bad-quotes-multiline-string
  "Q002", # bad-quotes-docstring
  "Q003", # avoidable-escaped-quote
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# pytest activates fixtures via parameter name; the body may not reference them.
"**/test_*.py" = ["ARG001", "ARG002"]
"**/tests/**" = ["ARG001", "ARG002"]
# Root entry scripts, deliberately not a package: importing them relies on `data/` being
# the path root, which adding an `__init__.py` (INP001's fix) would break.
"data/compile.py" = ["INP001"]
"data/utils.py" = ["INP001"]
"data/pipeline_types.py" = ["INP001"]

[tool.ruff.lint.pep8-naming]
# `dataframely` rules and pydantic validators receive the class as first argument.
classmethod-decorators = [
  "classmethod",
  "pydantic.validator",
  "pydantic.field_validator",
  "pydantic.root_validator",
  "dataframely.rule",
  "dy.rule",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in docstrings.
docstring-code-line-length = "dynamic"
