[package]
name = "motis-openapi-progenitor"
version = "0.2.0"
edition = "2024"
authors = ["Frank Elsinga <frank@elsinga.de>"]
description = "API-wrapper around the motis api used for routing"
keywords = ["routing", "api", "openapi", "ppr", "csr"]
categories = ["science::geo", "api-bindings", "asynchronous", "web-programming", "wasm"]
repository = "https://github.com/TUM-Dev/navigatum"
license = "MIT"
rust-version = "1.85.1"
homepage = "https://motis-project.de/"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.0"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.9.1"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio-test= "0.4.4"
