[package]
name = "motis-openapi-progenitor"
version = "0.2.2"
edition = "2024"
authors = ["Frank Elsinga <frank@elsinga.de>"]
description = "API-wrapper around the motis api used for routing"
keywords = ["routing", "api", "openapi", "ppr", "csr"]
categories = ["science::geo", "api-bindings", "asynchronous", "web-programming", "wasm"]
repository = "https://github.com/TUM-Dev/navigatum"
license = "MIT"
rust-version = "1.85.1"
homepage = "https://motis-project.de/"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
progenitor-client = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "default-tls"] }
