[package]
name = "motis-openapi-progenitor"
version = "0.3.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "API-wrapper around the motis api used for routing"

[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.11.1"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
