[package]
name = "navigatum-server"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition.workspace=true
description = "Navigating around TUM with excellence – An API and website to search for rooms, buildings and other places"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "navigation", "api-rest", "tum"]
default-run = "navigatum-server"

[[bin]]
name = "navigatum-server"
path = "src/main.rs"

[dependencies]
# logging/obeservability
actix-web-prom = { workspace=true, default-features = false, features = [] }
tracing-subscriber = { workspace=true, features = ["env-filter", "json", "fmt"] }
tracing.workspace=true
tracing-log = { workspace=true, features = ["std", "log-tracer", "interest-cache"] }
tracing-actix-web.workspace=true

# errors
anyhow = { workspace=true, features = ["backtrace"] }

#serialisation
serde = { workspace=true, features = ["derive"] }
serde_with = { workspace=true, default-features = false, features = [] }
serde_json = { workspace=true, features = ["raw_value"] }
serde_yaml.workspace=true

# runtime + webserver
tokio = { workspace=true, default-features = false, features = ["rt-multi-thread", "time", "sync", "process"] }
actix-web = { workspace=true, default-features = false, features = ["compress-brotli", "compress-gzip", "compress-zstd", "cookies", "http2", "macros"] }
actix-cors.workspace=true
rustls.workspace=true
actix-files.workspace=true

moka = { workspace=true, features = ["future"] }
futures.workspace=true
unicode-truncate.workspace=true

# database
sqlx = { workspace=true, features = ['chrono', 'json', 'macros', 'migrate', 'postgres', 'runtime-tokio', 'tls-rustls'], default-features = false }
chrono = { workspace=true, default-features = false, features = ["serde"] }

# search
meilisearch-sdk = {version="0.32.0", default-features = false, features = ["reqwest", "jwt_aws_lc_rs"]}
logos.workspace=true
regex.workspace=true

# web access
oauth2 = { workspace=true, default-features = false, features = ["rustls-tls", "reqwest"] }
reqwest = { workspace=true, default-features = false, features = ["gzip", "hickory-dns", "http2", "json", "rustls-tls"] }

# image production
image = { workspace=true, default-features = false, features = ["jpeg", "png", "webp"] }
imageproc.workspace=true
ab_glyph = { workspace=true, default-features = false }
fast_qr = { workspace=true, features = ["image"] }

rand.workspace=true
octocrab = { workspace=true, default-features = false, features = ["default-client", "retry", "rustls", "rustls-webpki-tokio", "rustls-aws-lc-rs", "jwt-aws-lc-rs"] }

# auth/security
jsonwebtoken = { workspace=true, default-features = false, features = ["aws_lc_rs"] }
actix-governor = { workspace=true, features = ["logger"] }

# proposing feedback
tempfile.workspace=true
base64.workspace=true
polars = { workspace=true, features = ["dtype-struct", "dtype-date", "dtype-datetime", "dtype-duration", "parquet"], default-features = false }

# geodata
actix-middleware-etag.workspace=true
valhalla-client = { workspace=true, default-features = false }
motis-openapi-progenitor = "0.4.0"
chroma-forge.workspace=true

# docs
utoipa-actix-web.workspace=true
utoipa = { workspace=true, features = ["yaml", "chrono", "actix_extras", "url"] }
utoipa-redoc = { workspace=true, features = ["actix-web"] }
url.workspace=true
itertools.workspace=true

[dev-dependencies]
insta = { workspace=true, features = ["json", "redactions", "yaml"] }
pretty_assertions.workspace=true
rstest.workspace=true
testcontainers = { workspace=true, features = ["watchdog"] }
testcontainers-modules = { workspace=true, features = ["meilisearch", "postgres"] }
tracing-test.workspace=true
