[package]
name = "navigatum-calendar"
version = "1.0.0"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition = "2021"
description = "Navigating around TUM with excellence – An API and website to search for rooms, buildings and other places"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "navigation", "api-rest", "tum"]

[[bin]]
name = "navigatum-calendar"
path = "src/main.rs"

[[bin]]
name = "navigatum-calendar-scraper"
path = "src/scraper.rs"

[dependencies]
# shared
log.workspace = true
structured-logger.workspace = true
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-web-prom.workspace = true
serde.workspace = true
serde_json.workspace = true

chrono = { version = "0.4.31", default-features = false, features = ["serde"] }

# database
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "chrono"] }

# metrics
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["default", "push"] }

# scraper
rand = "0.8.5"
futures = "0.3.30"
rustls = "0.22.2"
reqwest = { version= "0.11.23", default-features = false, features = ["tokio-rustls", "json", "gzip"] }
minidom = "0.15.2"
regex = "1.10.2"

[dev-dependencies]
pretty_assertions.workspace = true
