[package]
name = "navigatum-feedback"
version = "1.0.0"
authors = ["Markus A <ge75sig@mytum.de>", "Frank Elsinga <frank@elsinga.de>"]
edition = "2021"
description = "Navigating around TUM with excellence – A feedback system to submit feedback via github issues"
repository = "https://github.com/TUM-Dev/navigatum"
readme = "README.md"
license = "GPL-3.0"
keywords = ["website", "feedback", "api-rest", "tum"]

[[bin]]
name = "navigatum-feedback"
path = "src/main.rs"

[dependencies]
# shared
log.workspace = true
structured-logger.workspace = true
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-web-prom.workspace = true
serde.workspace = true
serde_json.workspace = true

rand = "0.8.5"
regex = "1.10.2"
octocrab = "0.31.2"

# web
jsonwebtoken = "8.3.0"
chrono= { version = "0.4.31", default-features = false }
actix-governor = { version = "0.5.0", features = ["log"] }

# proposing feedback
tempfile = "3.8.0"
image = { version = "0.24.7", features = ["default", "webp-encoder"] }
imageproc = "0.23.0"
base64 = "0.21.4"
serde_yaml = "0.9"

[dev-dependencies]
pretty_assertions.workspace = true
